k8s/result.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      nodeSelector:
        role: frontend
      containers:
        - name: result
          image: yahea_thakeb/result:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: result
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: result
  type: ClusterIP
